kApp1/app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1

spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1

    spec:
      containers:
        - name: app1
          image: app1v7
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
              protocol: TCP
