kApp1/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: app1
